Attempt to fix hovering over side buttons when not visible causing them to appear

--- a/booted/css/post.less
+++ b/booted/css/post.less
@@ -16,8 +16,8 @@
     border-bottom: 3px solid #000;
     border-radius: 0px;
 
-    &:hover .post-controls, 
-    &:hover .activeind {
+    &:hover > .post-controls, 
+    &:hover > .activeind {
         opacity: 1.0;
     }
 
